# claw-code

./: index.html  manifest.json  sw.js
financial-bridge/: agent_patch.py  e2e_test.py  requirements_bridge.txt  run_tests_mac.sh  tools_optimized.py
financial-bridge/test_env/: stress_test.py  tool_server.py  tools.py
ios-app/: Package.swift  project.yml  setup_xcode.sh
ios-app/Sources/ClawApp/: ClawApp.swift  ContentView.swift
ios-app/Sources/ClawIosSDK/: .gitkeep
prospecting-agents/: .gitignore  CLAUDE.md  README.md  config.example.yaml  config.yaml  requirements.txt  scheduler.py
prospecting-agents/common/: email_matrix.py  followup.py  io_master.py  notify.py  scrubber.py
prospecting-agents/evals/: emails_labeled.example.csv  eval_scanner.py  eval_verifier.py  gen_matrix_snapshots.py  replies_labeled.example.jsonl
prospecting-agents/queue/: __init__.py  lead_refill.py  queue_builder.py
prospecting-agents/scanner/: reply_scanner.py
prospecting-agents/scripts/: log_invii.py  rigenera_colonne_v4.py
prospecting-agents/tests/: test_email_matrix.py  test_followup.py  test_io_master.py  test_log_invii.py  test_queue_builder.py  test_reply_scanner.py  test_rigenera_colonne_v4.py  test_scrubber.py  test_trigger_monitor.py  test_verifier.py
prospecting-agents/triggers/: trigger_monitor.py
prospecting-agents/verifier/: email_verifier.py
rust/crates/claw-ios-sdk/: Cargo.toml  uniffi.toml
rust/crates/claw-ios-sdk/src/: client.rs  financial.rs  lib.rs  memory.rs  tools.rs
rust/scripts/: build-ios.sh
web/: index.html  manifest.json
(+27 files in other folders)
