[package]
name = "claw-ios-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["staticlib"]
name = "claw_ios_sdk"

[dependencies]
api = { path = "../api" }
runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "io-util"] }
uniffi = { version = "0.28" }

[lints]
workspace = true
